...
    <string name="app_name" translatable="false">Forgeline</string>

    <string name="tab_inbox">Inbox</string>
    <string name="tab_feed">Feed</string>
    <string name="tab_trending">Trending</string>
    <string name="tab_you">You</string>
    <string name="navigate_up">Navigate up</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

...
    <string name="inbox_filter_participating">Participating</string>
    <string name="inbox_filter_all">All</string>
    <string name="inbox_filter_yours">Yours</string>
    <string name="inbox_caught_up_title">You\'re all caught up</string>
    <string name="inbox_caught_up_body">New notifications will show up here.</string>
...
    <string name="inbox_kind_commit">Commit</string>
    <string name="inbox_kind_other">Notification</string>
    <string name="inbox_undo">Undo</string>
    <string name="inbox_undo_read">Marked as read</string>
    <string name="inbox_undo_unread">Marked as unread</string>
...
    <string name="feed_line_tag_created">%1$s created a tag in %2$s</string>
    <string name="feed_line_tag_deleted">%1$s deleted a tag in %2$s</string>
    <string name="feed_state_open">Open</string>
    <string name="feed_state_reopened">Reopened</string>
    <string name="feed_state_closed">Closed</string>
    <string name="feed_state_merged">Merged</string>
    <string name="feed_state_comment">Comment</string>
    <string name="feed_state_approved">Approved</string>
    <string name="feed_state_changes">Changes requested</string>
...
    <string name="repo_tab_readme" translatable="false">README</string>
    <string name="repo_tab_code">Code</string>
    <string name="repo_tab_issues">Issues</string>
    <string name="repo_tab_pulls">Pull requests</string>
    <string name="reference_looking">Looking for conversations</string>
    <string name="reference_issue">Issue</string>
    <string name="reference_pull_request">Pull request</string>
    <string name="repo_tab_discussions">Discussions</string>
    <string name="repo_no_discussions">No discussions yet.</string>
    <string name="repo_discussion_answered">Answered</string>
...
    <string name="repo_loading_more">Loading more</string>
    <string name="repo_wiki" translatable="false">Wiki</string>
    <string name="repo_watch">Watch</string>
    <string name="repo_watching">Watching</string>
    <string name="repo_watch_failed">Couldn\'t change what you watch. Try again.</string>
    <string name="repo_fork_action">Fork</string>
    <string name="repo_forking">Forking</string>
    <string name="repo_fork_title">Fork %1$s?</string>
...
    <string name="repo_list_open">Open</string>
    <string name="repo_list_closed">Closed</string>
    <string name="repo_search_issues">Search issues</string>
    <string name="repo_search_pulls">Search pull requests</string>
    <string name="repo_pinned">Pinned</string>
...
    <string name="inbox_state_merged_pull">Merged pull request</string>
    <string name="inbox_state_closed_pull">Closed pull request</string>
    <string name="inbox_state_open_issue">Open issue</string>
    <string name="inbox_state_closed_issue">Closed issue</string>
    <string name="inbox_state_not_planned">Issue not planned</string>
...
    <string name="file_too_large_body">Open it in your browser to see it.</string>
    <string name="work_reviews">Waiting for your review</string>
    <string name="work_own">Your open pull requests</string>
    <string name="work_assigned">Assigned to you</string>
    <string name="work_loading">Loading your work</string>
    <string name="work_empty_title">Nothing waits on you</string>
...
    <string name="issue_review_dismissed">%1$s\'s review was dismissed</string>
    <string name="issue_load_more">Load more</string>
    <string name="issue_to_top">Go to the top</string>
    <string name="issue_to_end">Go to the latest</string>
    <string name="issue_comment_placeholder">Add a comment</string>
    <string name="issue_comment_send">Comment</string>
    <string name="issue_comment_sending">Sending</string>
...
    <string name="issue_assigned_to">Assigned to %1$s</string>
    <string name="issue_milestone">Milestone: %1$s</string>
    <string name="issue_comment_more">Comment options</string>
    <string name="issue_comment_quote">Quote reply</string>
    <string name="issue_comment_edit">Edit</string>
    <string name="issue_comment_delete">Delete</string>
    <string name="issue_comment_delete_title">Delete this comment?</string>
    <string name="issue_comment_delete_body">It is deleted for good, for everyone.</string>
    <string name="issue_comment_delete_failed">The comment wasn\'t deleted. Try again.</string>
    <string name="issue_comment_editing">Rewriting your comment</string>
    <string name="issue_comment_save">Save</string>
    <string name="issue_comment_saving">Saving</string>
    <string name="issue_reaction_failed">The reaction wasn\'t saved. Try again.</string>
...
    <string name="issue_transferred_event">%1$s transferred this from another repository %2$s</string>
    <string name="issue_converted_event">%1$s converted this to a discussion %2$s</string>
    <string name="issue_close">Close issue</string>
    <string name="issue_reopen">Reopen issue</string>
    <string name="issue_close_pull">Close pull request</string>
    <string name="issue_reopen_pull">Reopen pull request</string>
...
    <string name="manage_due_date">Due date</string>
    <string name="manage_due_remove">Remove due date</string>
    <string name="manage_time">Time tracker</string>
    <string name="manage_time_spent">Time spent so far: %1$s</string>
    <string name="manage_time_none">No time recorded yet.</string>
...
    <string name="manage_timer_running">Your timer started %1$s. Stopping it records the time.</string>
    <string name="manage_time_add_title">Add time already spent</string>
    <string name="manage_time_hours">Hours</string>
    <string name="manage_time_minutes">Minutes</string>
    <string name="manage_time_add">Add time</string>
    <string name="manage_dependencies">Dependencies</string>
    <string name="manage_dependencies_none">This doesn\'t depend on anything yet.</string>
    <string name="manage_dependency_open">%1$s · open</string>
    <string name="manage_dependency_closed">%1$s · closed</string>
    <string name="manage_dependency_remove">Remove the dependency on %1$s</string>
    <string name="manage_dependency_placeholder">Issue number, like 12</string>
    <string name="manage_dependency_add">Add dependency</string>
    <string name="manage_on_forge">On %1$s\'s site: its API can\'t do this</string>
    <string name="manage_title">Manage</string>
    <string name="manage_back">Back to Manage</string>
    <string name="manage_none">None</string>
    <string name="manage_labels">Labels</string>
    <string name="manage_assignees">Assignees</string>
    <string name="manage_milestone">Milestone</string>
...
    <string name="manage_pin">Pin issue</string>
    <string name="manage_unpin">Unpin issue</string>
    <string name="manage_duplicate">Duplicate issue</string>
    <string name="manage_transfer">Transfer issue</string>
    <string name="manage_transfer_body">Moves this issue and its conversation to another repository of %1$s.</string>
    <string name="manage_transfer_placeholder">Repository name</string>
    <string name="manage_transfer_confirm">Transfer</string>
    <string name="manage_transferring">Transferring</string>
    <string name="manage_delete">Delete issue</string>
    <string name="manage_delete_body">This deletes the issue and its whole conversation for good. It can\'t be undone.</string>
    <string name="manage_delete_confirm">Delete for good</string>
    <string name="manage_deleting">Deleting</string>
    <string name="manage_cancel">Cancel</string>
...
